syntax = 'proto3';

import "google/protobuf/empty.proto";

option go_package = '/grpc';

package user_point.v1;

service UserPointService {
  rpc GetUserPoint (GetUserPointRequest) returns (GetUserPointResponse) {}
  rpc UpdateUserPoint (UpdateUserPointRequest) returns (google.protobuf.Empty) {}

  rpc DisablePointAllUsers (DisablePointAllUsersRequest) returns (google.protobuf.Empty) {}
}

message GetUserPointRequest {
  string user_id = 1;
}

message GetUserPointResponse {
  int32 point = 1;
}

message UpdateUserPointRequest {
  string user_id = 1;
  int32 point = 2;
}

message DisablePointAllUsersRequest {
  string reason = 1;
}